--- a/index.html
+++ b/index.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ID CARD - ACKMAD ELFAN PURNAMA</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ID CARD - ACKMAD ELFAN PURNAMA</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="card-container">
-    <div class="header">
-      <img src="logo-kai.png" alt="Logo PT KAI" class="logo kai">
-      <img src="logo-skinfa.png" alt="Logo SKINFA" class="logo skinfa">
+    <div class="card-container">
+        <div class="header">
+            <img src="logo-kai.png" alt="Logo PT KAI" class="logo kai">
+            <img src="logo-skinfa.png" alt="Logo SKINFA" class="logo skinfa">
+        </div>
+
+        <div class="content">
+            <h1>Ackmad Elfan Purnama</h1>
+            <p><strong>Sekolah:</strong> SMK INFORMATIKA AL-IRSYAD AL-ISLAMIYYAH</p>
+            <p><strong>Jurusan:</strong> Rekayasa Perangkat Lunak</p>
+            <p><strong>Tempat PKL:</strong> PT KAI DAOP 3</p>
+            <p><strong>NIS:</strong> 232410004</p>
+            <p><strong>NISN:</strong> 0081263934</p>
+            <p><strong>Tanggal Lahir:</strong> 22 Januari 2025</p>
+            <p><strong>WhatsApp:</strong> <a href="https://wa.me/6289666192392" target="_blank">+62 812-3456-7890</a>
+            </p>
+            <p><strong>Instagram:</strong> <a href="https://instagram.com/Ackmad2019" target="_blank">@Ackmad2019</a>
+            </p>
+            <p><strong>Berlaku Hingga:</strong> 1 Desember 2025</p>
+        </div>
+
+        <div class="qrcode">
+            <a href="http://ackmad.github.io" target="_blank" class="qrcode-btn">Website Portfolio</a>
+            <p class="qrcode-desc">Mau tahu lebih banyak? Ayo kenalan lebih dalam 😄</p>
+        </div>
     </div>
 
-    <div class="content">
-      <h1>Ackmad Elfan Purnama</h1>
-      <p><strong>Sekolah:</strong> SMK Informatika Al-Irsyad Al-Islamiyyah Kota Cirebon</p>
-      <p><strong>Jurusan:</strong> Rekayasa Perangkat Lunak</p>
-      <p><strong>Tempat PKL:</strong> PT KAI DAOP 3</p>
-      <p><strong>NIS:</strong> 12345678</p>
-      <p><strong>NISN:</strong> 9876543210</p>
-      <p><strong>Tanggal Lahir:</strong> 17 Januari 2007</p>
-      <p><strong>WhatsApp:</strong> <a href="https://wa.me/6281234567890" target="_blank">+62 812-3456-7890</a></p>
-      <p><strong>Instagram:</strong> <a href="https://instagram.com/elfan.id" target="_blank">@elfan.id</a></p>
-      <p><strong>Berlaku Hingga:</strong> 31 Desember 2025</p>
-    </div>
-
-    <div class="qrcode">
-      <img src="qrcode.png" alt="QR Code">
-    </div>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
